--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ go:
   - 1.7
   - 1.8
   - 1.9
+
+before_install:
+  - go get github.com/mattn/goveralls
+
+script:
+  - goveralls -service=travis-ci
