feat(lint): add gometalinter

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ go:
 
 before_install:
   - go get github.com/mattn/goveralls
+  - go get -u github.com/alecthomas/gometalinter
+  - gometalinter --install
 
 script:
+  - gometalinter --config=config.json ./...
   - goveralls -service=travis-ci
