chore: update vendor

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,7 @@
 [[constraint]]
   name = "github.com/spf13/viper"
   version = "1.0.0"
+
+# [[override]]
+#  name = "github.com/ugorji/go"
+#  revision = "ded73eae5db7e7a0ef6f55aace87a2873c5d2b74"
