feat(verify): add gofmt govet boilerplate test

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ before_install:
 script:
   - gometalinter --config=config.json ./...
   - goveralls -service=travis-ci
+  - hack/verify-govet.sh
+  - hack/verify-gofmt.sh
