--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,8 +22,9 @@
 
 
 [[constraint]]
-  branch = "master"
   name = "github.com/golang/glog"
+  # from kubernetes
+  revision = "44145f04b68cf362d9c4df2182967c2275eaefed"
 
 [[constraint]]
   name = "github.com/spf13/cast"
