feat(lint): add unused, and then replace with megacheck

--- a/config.json
+++ b/config.json
@@ -5,13 +5,12 @@
     "vet",
     "gotype",
     "safesql",
-    "staticcheck",
     "errcheck",
     "goconst",
     "goimports",
     "varcheck",
     "gas",
-    "gosimple",
+    "megacheck",
     "lll",
     "unconvert",
     "misspell",
