--- a/config.json
+++ b/config.json
@@ -14,9 +14,14 @@
     "lll",
     "unconvert",
     "misspell",
+    "golint",
     "deadcode",
     "unconvert"
   ],
+  "Aggregate": true,
+  "WarnUnmatchedNolint": true,
   "LineLength": 160,
-  "Exclude": ["examples", "docs", "website"]
+  "Exclude": ["comment or be unexported"],
+  "Deadline": "300s",
+  "Skip": ["examples", "docs", "website"]
 }
