--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,7 +36,7 @@
 
 [[constraint]]
   name = "github.com/spf13/pflag"
-  version = "1.0.0"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/spf13/viper"
