--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ go:
 
 before_install:
   - go get github.com/mattn/goveralls
-  - go get -u github.com/alecthomas/gometalinter
-  - gometalinter --install
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.16.0
 
 script:
-  - make test
-  - gometalinter --config=config.json ./...
+  - hack/verify_boilerplate.py
+  - golangci-lint run
   - GO_COVER_PROFILE=$(mktemp -u)
   - go test ./... -race -covermode atomic -coverprofile $GO_COVER_PROFILE
   - goveralls -service=travis-ci -coverprofile $GO_COVER_PROFILE
